--- a/style.css
+++ b/style.css
@@ -22,6 +22,18 @@ html {
 .side-nav li.active {
     background-color: rgba(33, 150, 243, .1);
 }
+
+.menu-btn {
+  position:fixed;
+  top: 10px;
+  left: 10px;
+  padding: 0 0.75rem;
+}
+@media (max-width: 996px) {
+  i.left {
+    margin-right: 0;
+  }
+};
 /* END SIDE NAV */
 
 /* START FORM COLOR SELECTIONS */
