--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ html {
 
 .menu-btn {
   position:fixed;
-  top: 10px;
+  top: 1.7rem;
   left: 10px;
   padding: 0 0.75rem;
+  z-index:100;
 }
 @media (max-width: 996px) {
   i.left {
